# rereric

./: README.md  pyproject.toml  setup.py  test_merge_conflict.txt
git_fuzzy_rerere/: fuzzy_rerere.py
git_fuzzy_rerere.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
git_fuzzy_rerere/tests/: conftest.py  test_fuzzy_rerere.py
git_fuzzy_rerere/tests/fixtures/: complex_conflict.txt  complex_conflict_reappearance_resolved.txt  simple_conflict.txt  simple_conflict_resolved.txt
rerereric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/rerereric/: __init__.py  cli.py  core.py
src/rerereric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_fuzzy_rerere.py
tests/fixtures/: complex_conflict.txt  complex_conflict_reappearance.txt  complex_conflict_resolved.txt  simple_conflict.txt  simple_conflict_resolved.txt
